# dosev

./: BUGFIXES_SUMMARY.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: dosev.conf  dosev.conf.example
docs/: architecture.md  config-reference.md  deployment-tips.md  quickstart.md
dosev/: __init__.py  cli.py  config.py  resolver.py  server.py  utils.py
tests/: test_cli.py  test_config.py  test_config_edge_cases.py  test_config_extra.py  test_connection_pool.py  test_dnssec_cd.py  test_dnssec_chain.py  test_dnssec_keytrap.py  test_health_checks.py  test_http3.py  test_integration_mock_server.py  test_integration_upstreams.py  test_ipv6_stripping.py  test_load_balancing.py  test_ns_scrub.py  test_pool.py  test_resolver.py  test_resolver_advanced.py  test_resolver_doq.py  test_resolver_edge_cases.py  test_resolver_extra.py  test_resolver_upstreams.py  test_server.py  test_server_extra.py  test_tcp_fallback.py  test_utils.py  test_utils_extra.py
